[tool.poetry]
name = "ot-flyertalk-monitor"
version = "2.0.0"
description = "A script for monitoring flyertalk for new posts, and alerting the team."
authors = ["Josh Ourisman <josh@pingpong.travel>"]
license = "private"

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
rich = "^12.5.1"
pydantic = "^1.9.1"
pendulum = "^2.1.2"
sqlmodel = "^0.0.6"
datasette = "^0.61.1"
datasette-publish-vercel = "^0.14"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
