[tool.poetry]
name = "ot-flyertalk-monitor"
version = "2.0.0"
description = "A script for monitoring flyertalk for new posts, and alerting the team."
authors = ["Josh Ourisman <josh@pingpong.travel>"]
license = "private"

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
rich = "^13.4.1"
pydantic = "^1.10.11"
pendulum = "^2.1.2"
sqlmodel = "^0.0.8"
datasette = "^0.64"
datasette-publish-vercel = "^0.14"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
